--- a/.github/workflows/deploy-to-ibm.yml
+++ b/.github/workflows/deploy-to-ibm.yml
@@ -28,7 +28,7 @@ jobs:
                 "clients": [
                   {
                     "id": "${{ secrets.CF_UUID_IBM }}",
-                    "alterId": 64
+                    "alterId": 6
                   }
                 ]
               },
@@ -49,9 +49,9 @@ jobs:
         cat > manifest-ibm.yml << EOF
         ---
         applications:
-        - name: v2ws
-          memory: 128M
-          disk_quota: 128M
+        - name: ibmeu
+          memory: 256M
+          disk_quota: 256M
           random-route: true
           command: ./v2ray
           buildpacks:
@@ -60,7 +60,7 @@ jobs:
     
     - uses: citizen-of-planet-earth/cf-cli-action@v1
       with:
-        cf_api: https://api.us-south.cf.cloud.ibm.com
+        cf_api: https://api.eu-gb.cf.cloud.ibm.com
         cf_username: ${{ secrets.CF_USER_IBM }}
         cf_password: ${{ secrets.CF_PASSWORD_IBM }}
         cf_org: ${{ secrets.CF_ORG_IBM }}
