--- a/.github/workflows/deploy-to-ibm.yml
+++ b/.github/workflows/deploy-to-ibm.yml
@@ -66,6 +66,6 @@ jobs:
         cf_org: ${{ secrets.CF_ORG_IBM }}
         cf_space: ${{ secrets.CF_SPACE_IBM }}
         command: >
-          push v2ws -f manifest-ibm.yml
+          push ibmeu -f manifest-ibm.yml
  
           
