--- a/.github/workflows/deploy-to-ibm.yml
+++ b/.github/workflows/deploy-to-ibm.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
     - master
-  schedule:
-    - cron: "0 7 */5 * *"
+#  schedule:
+#    - cron: "0 7 */5 * *"
 
 jobs:
   deploy:
